--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,34 @@
+html {
+  background-color:#edecda;
+}
+
 .box {
-  padding: 10px;
-  margin: 0 auto;
+  position: relative;
+  left: 20%;
   float:left;
   display: inline-block;
   width: 375px;
   height: 500px;
+  border-radius:25px;
+  border-color:black;
   border-style: groove;
   border-width: 5px;
 }
+
+#recipes {
+  margin-right:10px;
+}
+
+#ingredients {
+  margin-left:10px;
+}
+#cook {
+  float:right;
+}
+
+#searchForm {
+  position:fixed;
+}
+/*#ingredients {
+  position:absolute;
+}*/
