--- a/styles.css
+++ b/styles.css
@@ -1,33 +1,91 @@
-html {
+body {
   background-color:#edecda;
+  font-family:avenir;
 }
 
-.box {
-  position: relative;
-  left: 20%;
-  float:left;
-  display: inline-block;
-  width: 375px;
-  height: 500px;
-  border-radius:25px;
-  border-color:black;
-  border-style: groove;
-  border-width: 5px;
+a {
+  color:#666;
+  text-decoration: none;
+}
+
+.ingredients-recipes-box {
+  margin-top: 10%;
+  width:100%;
+  height:100%;
+  position:absolute;
+  display:inline-block;
+  z-index:-1;
 }
 
 #recipes {
-  margin-right:10px;
+  z-index:-1;
+  position: relative;
+  display: inline-block;
+  width: 375px;
+  height: 450px;
+  border-radius:20px;
+  border-color:#99d2c6;
+  border-style: solid;
+  border-width: 5px;
+  margin-left:16.5%;
+  margin-top:3.2%;
 }
 
 #ingredients {
-  margin-left:10px;
-}
-#cook {
+  z-index:-1;
+  display:inline-block;
+  /*margin-left:10px;*/
+  position:relative;
+  /*left:20%;*/
+  width:375px;
+  height:500px;
   float:right;
+  margin-right:16.5%;
+  background-image: url('clipboard.png');
+  background-size: 375px 500px;
 }
 
+#cook {
+  background-color:#ec957a;
+  font-family:avenir;
+  border:none;
+  float:right;
+  color:white;
+}
+
+/*#clipboard {
+  max-width:100%;
+  max-height:100%;
+}*/
 #searchForm {
-  position:fixed;
+  margin: 0 auto;
+  text-align:center;
+  border:none;
+  position:absolute;
+  z-index:1;
+}
+
+.recipe-list{
+  word-wrap:break-word;
+  padding-left:25px;
+  padding-right:25px;
+  padding-top:25px;
+  padding-bottom:25px;
+}
+
+.recipe-submit{
+  font-family:avenir;
+  border:none;
+  height:2.2em;
+  background-color:#ec957a;
+  color:white;
+}
+.recipe-search{
+  font-family:avenir;
+  height:2.2em;
+  width:150px;
+  border:none;
+  /*background-color:red;*/
 }
 /*#ingredients {
   position:absolute;
