--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,15 @@ a {
   color:white;
 }
 
+#save {
+  margin-left: 5px;
+  background-color:#ec957a;
+  font-family:avenir;
+  border:none;
+  float:right;
+  color:white;
+}
+
 /*#clipboard {
   max-width:100%;
   max-height:100%;
@@ -67,6 +76,7 @@ a {
 
 .recipe-list{
   word-wrap:break-word;
+  height:350px;
   padding-left:25px;
   padding-right:25px;
   padding-top:25px;
@@ -74,18 +84,31 @@ a {
 }
 
 .recipe-submit{
+  font-size:12px;
   font-family:avenir;
   border:none;
-  height:2.2em;
+  height:2.6em;
   background-color:#ec957a;
   color:white;
 }
 .recipe-search{
+  margin-top:10px;
+  margin-left:80px;
   font-family:avenir;
   height:2.2em;
   width:150px;
   border:none;
   /*background-color:red;*/
+}
+
+.ingredient-list {
+  word-wrap:break-word;
+  padding-left:25px;
+  padding-right:25px;
+  padding-top:70px;
+  padding-bottom:25px;
+  width: 325px;
+  height: 375px
 }
 /*#ingredients {
   position:absolute;
