--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,10 @@ a {
 }
 
 .ingredients-recipes-box {
+  border:none;
+  border-radius:25px;
   margin-top: 10%;
+  margin-bottom:20%;
   width:100%;
   height:100%;
   position:absolute;
@@ -34,15 +37,41 @@ a {
 #ingredients {
   z-index:-1;
   display:inline-block;
-  /*margin-left:10px;*/
   position:relative;
-  /*left:20%;*/
   width:375px;
   height:500px;
   float:right;
   margin-right:16.5%;
   background-image: url('clipboard.png');
   background-size: 375px 500px;
+}
+
+#recipe-book {
+  border-radius:15px;
+  margin-top: 5%;
+  margin-left:20%;
+  display:inline-block;
+  width:750px;
+  height:150px;
+  background-color:white;
+}
+
+.saved-recipes {
+  border-radius:15px;
+  float:left;
+  display:block;
+  margin-top:25px;
+  margin-left: 10px;
+  margin-right:10px;
+  width:750px;
+  height:90px;
+  overflow:auto;
+}
+
+.recipe-left {
+  margin-left: 10px;
+  margin-right:10px;
+  float:left;
 }
 
 #cook {
@@ -62,10 +91,6 @@ a {
   color:white;
 }
 
-/*#clipboard {
-  max-width:100%;
-  max-height:100%;
-}*/
 #searchForm {
   margin: 0 auto;
   text-align:center;
@@ -98,7 +123,6 @@ a {
   height:2.2em;
   width:150px;
   border:none;
-  /*background-color:red;*/
 }
 
 .ingredient-list {
@@ -110,6 +134,10 @@ a {
   width: 325px;
   height: 375px
 }
-/*#ingredients {
-  position:absolute;
-}*/
+
+
+
+.saved-recipes img:hover {
+  opacity: .80;
+}
+
